--- a/frontend/src/components/pages/teams/teams.css
+++ b/frontend/src/components/pages/teams/teams.css
@@ -44,20 +44,34 @@ h3 {
 }
 
 
-.team-list {
+.team-list { 
     display: flexbox;
-    width: 50%;
+    width:600px;
+    max-width: 100vw;
     margin: 0 auto;
 }
 
 .team-form{
     margin: 0 auto;
-    width: 50%;
+    width:600px;
+    max-width: 100vw;
 }
 
 .team-form *{
     margin-top: 12px;
     margin-bottom: 12px;
+}
+
+.container{
+    margin-bottom: 12px ;
+}
+
+.deleteTeamButton {
+    margin-bottom: 12px;
+}
+
+.deleteMemberButton {
+    margin-left: 12px;
 }
 
 .teamForm {
