--- a/frontend/src/components/pages/teams/teams.css
+++ b/frontend/src/components/pages/teams/teams.css
@@ -33,6 +33,10 @@ h3 {
     color: dodgerblue;
 }
 
+h5 {
+    color: cadetblue;
+}
+
 .grey-text {
     color: lightgrey;
 }
@@ -44,26 +48,26 @@ h3 {
 }
 
 
-.team-list { 
+.team-list {
     display: flexbox;
-    width:600px;
+    width: 600px;
     max-width: 100vw;
     margin: 0 auto;
 }
 
-.team-form{
+.team-form {
     margin: 0 auto;
-    width:600px;
+    width: 600px;
     max-width: 100vw;
 }
 
-.team-form *{
+.team-form * {
     margin-top: 12px;
     margin-bottom: 12px;
 }
 
-.container{
-    margin-bottom: 12px ;
+.container {
+    margin-bottom: 12px;
 }
 
 .deleteTeamButton {
@@ -79,4 +83,8 @@ h3 {
     display: flex;
     justify-content: center;
     flex-direction: column;
+}
+
+.memberModalButton{
+    margin-top:12px;
 }
